--- a/src/CreateConsultantComponents/Home/Home.css
+++ b/src/CreateConsultantComponents/Home/Home.css
@@ -153,7 +153,7 @@
 fill: black !important
 }
 .MuiSvgIcon-root.Mui-active {
-  border: 1px solid black !important;
+  border: none !important;
   fill: black !important ;
 }
 .MuiSvgIcon-root.Mui-active .MuiStepIcon-text{
