--- a/src/CreateConsultantComponents/Agreement/Agreement.css
+++ b/src/CreateConsultantComponents/Agreement/Agreement.css
@@ -26,6 +26,12 @@
   margin-bottom: 0.5em !important;
   margin-top: 1.5em !important;
 }
+.AGhead4 {
+  font-size: calc(1.75vw);
+  font-weight: "bold";
+  font-family: oswald;
+  margin-top: 60px;
+}
 .agreementButton1 {
   background: #dcba80;
   text-align: center;
@@ -109,12 +115,13 @@
   border-color: #d8c5a6;
   border-style: solid;
   background: white;
-  width: initial;
+  /* width: initial; */
+  max-width: 100%;
   height: 30vw;
   margin-top: 1em;
   overflow-y: scroll;
   font-family: Domine;
-  padding: 2em;
+  /* padding: 2em; */
   scroll-behavior: smooth;
   /* font-size: calc(1px + 1vw); */
 }
@@ -176,6 +183,12 @@
     font-family: oswald;
     font-weight: 300;
     margin-top: 2em !important;
+  }
+  .AGhead4 {
+    font-size: calc(5vw);
+    font-weight: "bold";
+    font-family: oswald;
+    margin-top: 60px;
   }
   .componentMargin {
     margin-top: 4em;
@@ -246,7 +259,7 @@
     font-family: oswald;
     text-align: center;
     margin-top: 1em;
-    width: 650px;
+    width: 600px;
     padding-top: 1em;
     padding-bottom: 1em;
     color: #6e7071;
@@ -259,13 +272,21 @@
     border-color: #d8c5a6;
     border-style: solid;
     background: white;
-    width: 650px;
+    width: 100%;
     height: 137vw;
     margin-top: 1em;
     overflow-y: scroll;
     font-family: Domine;
-    padding: 1em;
+    /* padding: 1em; */
   }
+  
+  /* Optional: Set a maximum height for smaller screens */
+  @media (max-width: 768px) {
+    .agreementPolicy {
+      max-width: 600px; /* Adjust the maximum height for smaller screens */
+    }
+  }
+  
   .agreementTitle {
     font-size: 1.5em;
     font-weight: bold;
@@ -290,6 +311,12 @@
     font-family: oswald;
     font-weight: 300;
     margin-top: 1.5em !important;
+  }
+  .AGhead4 {
+    font-size: calc(5vw);
+    font-weight: "bold";
+    font-family: oswald;
+    margin-top: 60px;
   }
   .agreementButton1 {
     background: #dcba80;
@@ -367,12 +394,12 @@
     border-color: #d8c5a6;
     border-style: solid;
     background: white;
-    width: initial;
+    width: 100%;
     height: 137vw;
     margin-top: 1em;
     overflow-y: scroll;
     font-family: Domine;
-    padding: 1em;
+    /* padding: 1em; */
   }
   .agreementTitle {
     font-size: 1.2em;
