--- a/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/CreateConsultantComponents/PaymentConfirmation/PaymentConfirmation.css
@@ -12,18 +12,23 @@
 .PCmobileComponent {
   margin-top: 40px;
 }
+
 .paymentConfirmationHead {
   font-family: Oswald;
   font-size: 2em;
   text-align: center;
+  font-weight: 500;
+}
+
+paymentConfirmationSuccess {
+  font-family: Oswald;
+  font-size: 1.5em;
+  text-align: center;
+  color: #2e3231;
+  margin-top: 5px;
   font-weight: 300;
 }
-.paymentConfirmationSuccess {
-  font-family: Oswald;
-  font-size: 2.5em;
-  text-align: center;
-  color: #4ba380;
-}
+
 .paymentConfirmationFaliure {
   font-family: Oswald;
   font-size: 2.5em;
@@ -50,9 +55,19 @@
 }
 
 .pcHead3 {
-  font-family: Domine;
+  font-family: Oswald;
   text-align: center;
 }
+
+.pcInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  margin: 90px 0;
+}
+
 .pcConsultantNumber {
   background: #f7f3f4;
   height: 2em;
@@ -69,18 +84,16 @@
 }
 
 .pcConsultantNumber1 {
-  background: #f7f3f4;
-  height: 2em;
-  width: 19.5em;
-  margin-bottom: 1em;
-  margin-top: 1em;
-  text-align: center;
-  font-size: 1.6em;
-  font-weight: bold;
-  padding-top: 0.25em;
-  font-family: Oswald;
+  font-variant: JIS83;
+  font-size: 1.5em;
+  font-weight: 300;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
+}
+.paymentConfirmationSuccess {
+  font-size: 25px;
+  text-align: center;
 }
 .fontOswald1 {
   font-family: oswald;
@@ -94,19 +107,30 @@
 }
 .pcFooter {
   background: #241f20;
+  min-height: 263px;
   width: 100%;
-  padding-top: 1.5em;
+  padding-top: 15px;
   overflow: hidden;
 }
 .pcFooterHead {
   font-family: oswald;
   font-size: 1.7em;
-  font-weight: 300;
-  color: #ffffff;
+  font-weight: 500;
+  color: #fff;
   text-align: center;
   margin: auto;
+  padding-bottom: 20px;
   width: 180px;
 }
+
+.pcFooterBody {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
 .pcFooterCard {
   background: #6f6c6d;
   width: 24em;
@@ -114,6 +138,13 @@
   border-radius: 0.5em;
   margin-top: 2em;
   margin-bottom: 2em;
+  display: inline-flex;
+  position: relative;
+  cursor: pointer;
+}
+.pcFooterImg {
+  width: 300px;
+  height: 100%;
   display: inline-flex;
   position: relative;
   cursor: pointer;
@@ -205,6 +236,10 @@
     margin-top: 2em;
   }
 
+  .pcFooterBody {
+    flex-direction: column;
+  }
+
   .pcFooterCard {
     background: #6f6c6d;
     width: 20em;
@@ -214,17 +249,11 @@
     cursor: pointer;
   }
   .paymentConfirmationHead {
-    font-family: Oswald;
-    font-size: 1.5em;
-    text-align: center;
-    font-weight: 300;
-    margin-top: 1.3em;
+    font-size: 28px;
   }
   .paymentConfirmationSuccess {
-    font-family: Oswald;
-    font-size: 2em;
-    text-align: center;
-    color: #4ba380;
+    font-size: 25px;
+    text-align: center !important;
   }
   .paymentConfirmationFaliure {
     font-family: Oswald;
@@ -251,9 +280,9 @@
     font-weight: 400;
   }
   .pcHead3 {
-    font-family: Domine;
+    font-family: Oswald;
     text-align: center;
-    font-size: 1em;
+    font-size: 24px;
   }
   .pcConsultantNumber {
     background: #f0eae8;
@@ -270,15 +299,10 @@
     margin-right: auto;
   }
   .pcConsultantNumber1 {
-    background: #f0eae8;
-    height: 3em;
-    width: 15.8em;
-    margin-bottom: 1.5em;
-    margin-top: 1em;
+    width: 19.5em;
     text-align: center;
-    font-size: 1.3em;
-    font-weight: bold;
-    padding-top: 0.8em;
+    font-size: 2em;
+    font-weight: 300;
     font-family: Oswald;
     margin-left: auto;
     margin-right: auto;
@@ -328,8 +352,7 @@
     margin-top: -1em;
   }
 }
-.WithStyles\(ForwardRef\(StepConnector\)\)-completed-40
-  .WithStyles\(ForwardRef\(StepConnector\)\)-line-41 {
+.WithStyles\(ForwardRef\(StepConnector\)\)-completed-40 .WithStyles\(ForwardRef\(StepConnector\)\)-line-41 {
   border-color: #4ba380;
   margin-left: 0.3em;
   margin-top: 0.2em;
