--- a/src/Assets/css/style.scss
+++ b/src/Assets/css/style.scss
@@ -11,6 +11,14 @@
   font-display: swap;
 }
 @font-face {
+  font-family: "Proxima_Nova";
+  src: url("../fonts/proximanova-bold.otf");
+  src: url("../fonts/proximanova-regular.otf");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
   font-family: "Domine";
   src: url("../fonts/Domine-Bold.eot");
   src: url("../fonts/Domine-Bold.eot?#iefix") format("embedded-opentype"),
