ticket 35 - Updated font and styling

--- a/src/CreateConsultantComponents/ConfirmDetails/ConfirmDetails.css
+++ b/src/CreateConsultantComponents/ConfirmDetails/ConfirmDetails.css
@@ -25,26 +25,35 @@
   font-size: 34px;
   font-family: oswald;
 }
+.signAsConsultant {
+  color: #085250;
+  font-size: 34px;
+  font-family: proxima-nova;
+  font-weight: 600;
+  /* font-weight: regular !important; */
+}
 .email1 {
   margin-top: 48px;
 }
 .emailLabel {
   margin-bottom: 8px;
   color: grey;
-  font-family: oswald;
+  font-family: proxima-nova;
+  font-weight: 600;
 }
 .SubText {
   font-size: 15px;
-  font-family: Domine;
+  font-family: proxima-nova;
 }
 .Input {
   border-width: 1px;
-  border-color: #d8c5a6 !important;
+  background-color: white;
+  border-color: #c5a475 !important;
   border-radius: 0 !important;
   width: 400px !important;
   height: 64px !important;
   margin-bottom: 8px;
-  font-family: Domine !important;
+  font-family: proxima-nova;
   font-weight: 600 !important;
 }
 .Input:focus {
@@ -70,7 +79,8 @@
 .errorMes {
   font-size: 12px;
   color: red;
-  font-family: Domine;
+  font-family: proxima-nova;
+  font-weight: 600;
   width: 272px;
 }
 
@@ -97,15 +107,15 @@
   font-family: Domine;
 }
 .passwordForgotLink {
-  color: #dcba80;
+  color: #c5a475;
   font-size: 16px;
   text-decoration: underline;
-  font-family: Domine;
+  /* font-family: Domine; */
+  font-family: proxima-nova;
   width: fit-content;
 }
 .passwordForgotLink:hover {
   cursor: pointer;
-  font-family: Domine;
 }
 .password1 {
   margin-top: 40px;
@@ -364,7 +374,7 @@ input:disabled {
 
 .NextarrowForwardIcon {
   cursor: pointer;
-  background-color: #dcba80;
+  background-color: #C5A475;
   width: 50px !important ;
   align-content: center;
   margin-top: auto;
@@ -427,6 +437,11 @@ input:disabled {
     font-weight: "bold";
     font-family: oswald;
   }
+  .signAsConsultant {
+    color: #085250;
+    font-size: 33px;
+    font-weight: 600;
+  }
   .mobileComponent {
     margin-top: 20px;
   }
@@ -441,14 +456,14 @@ input:disabled {
   }
   .Input {
     border-width: 1px;
-    border-color: #d8c5a6 !important;
+    border-color: #c5a475 !important;
     border-radius: 0 !important;
     width: 280px !important;
     height: 50px !important;
     margin-bottom: 8px;
   }
   .Input:focus {
-    border-color: #d8c5a6 !important;
+    border-color: #c5a475 !important;
   }
   .Red {
     border-width: 1px;
@@ -473,7 +488,7 @@ input:disabled {
   }
   .NextarrowForwardIcon {
     cursor: pointer;
-    background-color: #dcba80;
+    background-color: #C5A475;
     width: 50px !important ;
     align-content: center;
     margin-top: auto;
@@ -490,19 +505,14 @@ input:disabled {
   }
   .SubText {
     font-size: 15px;
-    font-family: Domine;
+    font-family: proxima-nova;
     width: 96% !important;
     margin-left: 1.3%;
   }
   .passwordForgotLink {
-    font-family: Domine;
+    /* font-family: Domine; */
     margin-left: 5px;
   }
-  /* .head3 {
-    color: grey;
-    font-family: oswald;
-    font-size: 48px;
-  } */
 
   .dataText {
     font-size: 62px;
@@ -685,7 +695,7 @@ input:disabled {
   }
   .NextarrowForwardIcon {
     cursor: pointer;
-    background-color: #dcba80;
+    background-color: #C5A475;
     width: 50px !important ;
     align-content: center;
     margin-top: auto;
@@ -734,7 +744,7 @@ input:disabled {
   }
   .Input {
     border-width: 1px;
-    border-color: #d8c5a6 !important;
+    border-color: #c5a475 !important;
     border-radius: 0 !important;
     width: 310px !important;
     height: 50px !important;
@@ -773,7 +783,7 @@ input:disabled {
   }
   .Input {
     border-width: 1px;
-    border-color: #d8c5a6 !important;
+    border-color: #c5a475 !important;
     border-radius: 0 !important;
     width: 280px !important;
     height: 50px !important;
@@ -811,14 +821,14 @@ input:disabled {
   }
   .Input {
     border-width: 1px;
-    border-color: #d8c5a6 !important;
+    border-color: #c5a475 !important;
     border-radius: 0 !important;
     width: 260px !important;
     height: 50px !important;
     margin-bottom: 8px;
   }
   .Input:focus {
-    border-color: #d8c5a6 !important;
+    border-color: #c5a475 !important;
   }
   .Red {
     border-width: 1px;
@@ -842,7 +852,7 @@ input:disabled {
   }
   .NextarrowForwardIcon {
     cursor: pointer;
-    background-color: #dcba80;
+    background-color: #C5A475;
     width: 50px !important ;
     align-content: center;
     margin-top: auto;
