--- a/src/CreateConsultantComponents/Home/Home.css
+++ b/src/CreateConsultantComponents/Home/Home.css
@@ -20,6 +20,19 @@
   font-family: oswald;
   font-size: 50px;
 }
+.fontProxima {
+  font-family: proxima-nova;
+  font-weight: 600;
+  font-size: 18px;
+  cursor: pointer;
+  opacity: 0.5;
+}
+.fontProxima1 {
+  font-family: proxima-nova;
+  font-weight: 600;
+  font-size: 50px;
+  opacity: 0.5;
+}
 .arrowIcon3 {
   margin-top: 5px;
   text-align: right;
@@ -33,42 +46,21 @@
 .headerMarginTop {
   padding-top: 20px;
   padding-bottom: 10px;
-  background: #e8e0dd;
+  background: #F7EDE4;
 }
+
 .stepperMarginTop {
   margin-top: 30px;
   width: 60%;
   margin-left: 6% !important;
 }
-/* .Home-step-1 {
-  border: 0 solid white;
-  color: black;
-  border-radius: 0;
-}
-.MuiStepIcon-root-53.MuiStepIcon-active-54 .MuiStepIcon-text-54 {
-  fill: #034691 !important;
-}
-.HomeContainer {
-  padding-bottom: 30px;
-}
-/* @media only screen and (max-width: 550px) {
-  .mobileMargin {
-    margin-bottom: 10vh;
-    margin-left: -5vw;
-  }
-  .mobileStep {
-    margin-left: 10vw;
-  }
-  .mobileStepHead {
-    margin-left: 15vw;
-    font-size: 3vh;
-    font-family: oswald;
-    font-weight: 400;
-  }
-} */
+
 
 @media (max-width: 1199px) {
   .fontOswald {
+    font-size: 15px;
+  }
+  .fontProxima {
     font-size: 15px;
   }
   .MuiStepper-horizontal {
@@ -79,6 +71,7 @@
 @media (max-width: 991px) {
   .LogoIcon {
     text-align: center;
+    margin-right: 35px;
   }
   .stepperMarginTop {
     margin-top: 0;
@@ -110,6 +103,9 @@
 
 @media (max-width: 640px) {
   .fontOswald {
+    font-size: 13px;
+  }
+  .fontProxima {
     font-size: 13px;
   }
 }
@@ -188,10 +184,10 @@ fill: black !important
 }
 @media (min-width: 568px) {
   .MuiStepIcon-text {
-    fill: black !important ;
+    fill: black !important;
   }
-  .MuiStepIcon-active > .MuiStepIcon-text {
-    fill: white !important ;
+  .Mui-active > .MuiStepIcon-text {
+    fill: white !important;
   }
 }
 @media (max-width: 1366px) {
